--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body dir="rtl">
     <nav class="nav">
         <div class="logo">
-            <img src="/images/Newlogo.png" alt="" class="img">
+            <img src="images/Newlogo.png" alt="" class="img">
         </div>
         <div class="col">
             <div class="links">
